{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 106,
  "lineage": "f71b0d0f-99d5-7e2f-e1ab-df065f4b2363",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:vpc/vpc-0d912a591fe34de43",
            "cidr_block": "172.31.117.64/26",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07cb99cdb4b9ededa",
                "cidr_block": "172.31.117.64/26",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-20c82559",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ecn1-VPC"
                ]
              }
            ],
            "id": "vpc-0d912a591fe34de43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f03417db501909a",
            "owner_id": "288627860431",
            "tags": {
              "Name": "ecn1-VPC",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:loadbalancer/app/cvist-alb-nonprod/331de65e1718f135",
            "arn_suffix": "app/cvist-alb-nonprod/331de65e1718f135",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-cvist-alb-nonprod-463765201.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:loadbalancer/app/cvist-alb-nonprod/331de65e1718f135",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cvist-alb-nonprod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c915e80a4c69af3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032a13bb29fa820f8"
              },
              {
                "subnet_id": "subnet-061c033499fcc6ac2"
              }
            ],
            "subnets": [
              "subnet-032a13bb29fa820f8",
              "subnet-061c033499fcc6ac2"
            ],
            "tags": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "tags_all": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "vpc_id": "vpc-0d912a591fe34de43",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.network.data.aws_security_group.selected",
            "module.network.data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:listener/app/cvist-alb-nonprod/331de65e1718f135/553c29eadb0d83a4",
            "certificate_arn": "arn:aws:acm:eu-west-1:288627860431:certificate/51f91368-1421-473f-b76d-36214367b795",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:targetgroup/cvist-alb-nonprod-tg/14e71cc551e188b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:listener/app/cvist-alb-nonprod/331de65e1718f135/553c29eadb0d83a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:loadbalancer/app/cvist-alb-nonprod/331de65e1718f135",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 8443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "tags_all": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb-main",
            "module.alb.aws_lb_target_group.alb-tg",
            "module.alb.data.aws_vpc.vpc",
            "module.network.data.aws_security_group.selected",
            "module.network.data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:targetgroup/cvist-alb-nonprod-tg/14e71cc551e188b4",
            "arn_suffix": "targetgroup/cvist-alb-nonprod-tg/14e71cc551e188b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/cvist/start",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:288627860431:targetgroup/cvist-alb-nonprod-tg/14e71cc551e188b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:288627860431:loadbalancer/app/cvist-alb-nonprod/331de65e1718f135"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cvist-alb-nonprod-tg",
            "port": 8443,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "tags_all": {
              "Environment": "Non-Production",
              "Owner": "DevOps",
              "Project": "Terraform-CVIST"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d912a591fe34de43"
          },
          "dependencies": [
            "module.alb.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_ec2_transit_gateway",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 65000,
            "arn": "arn:aws:ec2:eu-west-1:764038863864:transit-gateway/tgw-03c54433f67b2cab3",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "TransitGateway1",
            "dns_support": "enable",
            "id": "tgw-03c54433f67b2cab3",
            "multicast_support": "disable",
            "owner_id": "764038863864",
            "security_group_referencing_support": "disable",
            "vpn_ecmp_support": "disable"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:route-table/rtb-07e4c49e97709917b",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0dcb43ebdbfd3b9b7",
                "route_table_id": "rtb-07e4c49e97709917b",
                "subnet_id": "subnet-061c033499fcc6ac2"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-07e4c49e97709917b",
            "owner_id": "288627860431",
            "route_table_id": "rtb-07e4c49e97709917b",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-03c54433f67b2cab3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "ecn1-PrivateRouteTable2",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d912a591fe34de43"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:route-table/rtb-0007c0d25c2f7ab46",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-00a416971a799a71d",
                "route_table_id": "rtb-0007c0d25c2f7ab46",
                "subnet_id": "subnet-032a13bb29fa820f8"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0007c0d25c2f7ab46",
            "owner_id": "288627860431",
            "route_table_id": "rtb-0007c0d25c2f7ab46",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-03c54433f67b2cab3",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "ecn1-PrivateRouteTable1",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d912a591fe34de43"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:security-group/sg-00c915e80a4c69af3",
            "description": "sg_app",
            "filter": null,
            "id": "sg-00c915e80a4c69af3",
            "name": "sg_app",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d912a591fe34de43"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-032a13bb29fa820f8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:subnet/subnet-032a13bb29fa820f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 21,
            "cidr_block": "172.31.117.64/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032a13bb29fa820f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288627860431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecn1-PrivateSubnet1",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            },
            "vpc_id": "vpc-0d912a591fe34de43"
          }
        },
        {
          "index_key": "subnet-061c033499fcc6ac2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:subnet/subnet-061c033499fcc6ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 22,
            "cidr_block": "172.31.117.96/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061c033499fcc6ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288627860431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ecn1-PrivateSubnet2",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            },
            "vpc_id": "vpc-0d912a591fe34de43"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288627860431:vpc/vpc-0d912a591fe34de43",
            "cidr_block": "172.31.117.64/26",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07cb99cdb4b9ededa",
                "cidr_block": "172.31.117.64/26",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-20c82559",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ecn1-VPC"
                ]
              }
            ],
            "id": "vpc-0d912a591fe34de43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f03417db501909a",
            "owner_id": "288627860431",
            "tags": {
              "Name": "ecn1-VPC",
              "Owner": "AWSCBM",
              "ericsson:ecn": "true"
            }
          }
        }
      ]
    }
  ]
}